# ultron

./: Cargo.toml  Changelog.md  Justfile  Notes.md  README.md  TODO.md  build.sh  index.html  justfile  lib.rs  rustfmt.toml  serve-no-ricraf.sh  serve.sh  test.sh
.github/workflows/: rust.yml
.scripts/: deploy-alpha.sh  deploy-beta.sh  deploy.sh  publish.sh
examples/: ssg.rs
examples/rusty-usage/: Cargo.toml  Justfile  README.md  index.html
examples/rusty-usage/src/: lib.rs
examples/simple/: Cargo.toml  Justfile  README.md  index.html
examples/simple/src/: lib.rs
src/: editor.rs  lib.rs  text_buffer.rs
src/editor/: text_buffer.rs  text_highlighter.rs
src/editor/text_buffer/: cell.rs  line.rs  range.rs
src/text_buffer/: cell.rs
src/unit_tests/: mod.rs
test_data/: cjk.bob  shapes.bob  tiny.bob
tests/: test_text_buffer.rs
ultron/: Cargo.toml  Notes.md  TODO.md
ultron-web/: Cargo.toml  deploy.sh  index.html  start.sh  start_optimized.sh
ultron-web/src/: lib.rs
ultron/src/: editor.rs  lib.rs  util.rs
ultron/src/editor/: action.rs  history.rs  style.rs  text_buffer.rs  text_highlight.rs
ultron/test_data/: hello.rs  short.bob  svgbob.md
ultron/tests/: lines.rs  test_text_buffer.rs  text_highlight.rs
