cargo-features = ["strip"]

[workspace]
members = [
    "packages/syntaxes-themes",
    "packages/ultron-core",
    "packages/ultron-web",
    "packages/ultron-ssg",
    "packages/ultron-app",
]

[patch.crates-io]

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true  
