cargo-features = ["strip"]

[workspace]
resolver = "2"
members = [
    "packages/syntaxes-themes",
    "packages/ultron-core",
    "packages/ultron-web",
    "packages/ultron-ssg",
    "packages/ultron-app",
    "examples/simple",
    "examples/rusty-usage",
]

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
opt-level = 3 
lto = true
panic = "unwind"
strip = true

[profile.dev]
debug = 2
panic = "unwind"
strip = "none"
