[package]
name = "ultron-web"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
ultron = { path = "../ultron"}
sauron = { version = "0.39", path = "../../sauron" }
log = "0.4"
console_log = { version = "0.2", features = ["color"]}
console_error_panic_hook = "0.1"

[features]
with-debug = []
