[package]
name = "ultron"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"
description = "Ultron is a code editor written in rust"

[lib]
crate-type = ["rlib","cdylib"]

[dependencies]
sauron = { version = "0.43", path = "../../sauron", features = ["with-measure"] }
console_error_panic_hook = "0.1"
log = "0.4"
console_log = { version = "0.2", features = ["color"]}
wee_alloc = { version = "0.4", optional = true }
unicode-width = "0.1"
text-canvas = { version = "0.1.0", path = "../../text-canvas" }
percent-encoding = "2.1.0"
syntect = { version = "4", default-features = false, features = ["default-fancy"] }
css-colors = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window", 
    "Navigator", 
    "Clipboard", 
    "DataTransfer", 
    "HtmlDocument",
    "DomRect",
    "Element",
]


[features]
# use this feature if only want to support latest browsers
with-navigator-clipboard = [] 
